Removed empty slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -105,14 +105,6 @@
 	                        commonly implemented as part of a web browser in order to create
 	                        enhanced user interfaces and dynamic websites."</p>
 	                </section>
-
-	                <section>
-	                    <h2>Background</h2>
-	                    <p class="">From Wikipedia:<br/>
-	                        "JavaScript (JS) is an open source <span style="color: red">client-side</span> scripting language
-	                        commonly implemented as part of a web browser in order to create
-	                        enhanced user interfaces and dynamic websites."</p>
-	                </section>
 	            </section>
 
                 <section>
@@ -204,7 +196,7 @@ $('#length').val($('.special').length);
 					<h2>onLoad</h2>
 					<pre class="">
 						<code contenteditable>
-							<div id="length">asd</div>
+							<div id="length"></div>
 							<script type="text/javascript">
 								$('#length').val($('.special').length);
 							</script>
@@ -214,10 +206,7 @@ $('#length').val($('.special').length);
 						</code>
 					</pre>
 
-					<p class="fragment">
-						Always use === and !== <br /><br />
-						All of the comparisons just shown <br />produce false with the === operator.
-					</p>
+
 					<p style="height:200px">&nbsp;</p>
 				</section>
 
