Larger font first slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -40,10 +40,8 @@
 
 				<section>
 					<h1>JavaScript for Analysts</h1>
-					<p>
-						<small>Wilhelm Eklund [wilhelm.eklund@netlight.com] <br />
-							&& Anders Bäck [anders.back@netlight.com]</small>
-					</p>
+					<p>Wilhelm Eklund [wilhelm.eklund@netlight.com] <br />
+							&& Anders Bäck [anders.back@netlight.com]</p>
 					<p style="height:200px">&nbsp;</p>
 				</section>
 
