--- a/presentation/index.html
+++ b/presentation/index.html
@@ -357,6 +357,13 @@ $('.mySelector').trigger('custom_event', ['param1', 'param2']);</code></pre>
 					<p style="height:200px">&nbsp;</p>
 				</section>
 
+				<section>
+					<h2>Thank you!</h2>
+
+
+					<p style="height:200px">&nbsp;</p>
+				</section>
+
 			</div>
 
 		</div>
