--- a/presentation/index.html
+++ b/presentation/index.html
@@ -21,15 +21,15 @@
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
 		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
-		<script>
+
+		<script type="text/javascript" src="../js/lib/jquery.js"></script>
+				<script>
 			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
 
-			$('.').on('click', function() {
-				eval($('#custom_event_code').text());
+			$('.eval').on('click', function() {
+				
 			});
 		</script>
-		<script type="text/javascript" src="../js/lib/jquery.js"></script>
-
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
