alot of changes

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -16,20 +16,14 @@
 		<link rel="stylesheet" href="../css/styles.css">
 		<link rel="stylesheet" href="../css/bootstrap.css">
 		<link rel="stylesheet" href="css/theme/default.css" id="theme">
-
+		<link rel="stylesheet" href="css/style.css">
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
 		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
 
 		<script type="text/javascript" src="../js/lib/jquery.js"></script>
-				<script>
-			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
 
-			$('.eval').on('click', function() {
-				
-			});
-		</script>
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
@@ -44,86 +38,101 @@
 
 				<section>
 					<h1>JavaScript for Analysts</h1>
-					<p>Wilhelm Eklund [wilhelm.eklund@netlight.com] <br />
-							&& Anders Bäck [anders.back@netlight.com]</p>
-					<p style="height:200px">&nbsp;</p>
-				</section>
-
-				<section>
-					<h2>Why should you care about javascript ?</h2>
-					<ul>
-						<li class="fragment">Anything Web Related</li>
-						<li class="fragment">Grow as a developer</li>
-					</ul>
-
-					<aside class="notes">
-						This is why!
-					</aside>
-				</section>
-
-				<section>
-					<h2>Who is this presentation made for ?</h2>
-					<ul>
-						<li class="fragment">Netlighters with no background in js</li>
-						<li class="fragment">Some background in HTML and CSS</li>
-                    </ul>
-				</section>
-
-				<section>
-					<h2>What will we do today?</h2>
-					<ul>
-						<li class="fragment">Basic Syntax/ Funny JS Features</li>
-                        <li class="fragment">Which IDE should I use ?</li>
-                        <li class="fragment">How do you debug JS ?</li>
-                        <li class="fragment">What is JQuery ?</li>
-                        <li class="fragment">I am a Java developer, What are the differences ?</li>
-                        <li class="fragment">JS is a weak typed. What does that really mean?</li>
-                        <li class="fragment">Help, I have 1500 lines of unstructured JS, How do I structure it ?</li>
-                    </ul>
+					<div style="float:left;margin-left: 50px">
+						<h3>Anders Bäck</h3>
+						<img src="img/anba.jpg" height="150px"/>
+                        <p>SC</p>
+                        <p style="font-size:17px">Cofounder collectably.com</p>
+					</div>
+                    <div style="float:right;margin-right: 50px">
+                        <h3>Wilhelm Eklund</h3>
+                        <img src="img/wiek.jpg" height="150px"/>
+                        <p>AC</p>
+                    </div>
 				</section>
 
                 <section>
-                    <h2>Table of Contents</h2>
-                    <ul class="fragment">
-                        <li class="">Background / Basic Syntax</li>
-                        <li class="">Features of Javascript (Code Examples)</li>
-                        <li class="">Web Development
-                            <ul>
-                                <li class="">JQuery</li>
-                                <li class="">Client vs Server Side</li>
-                            </ul>
-                        </li>
-                        <li class="">Structured JS, the Netlight way.</li>
-                        <li class="">JS IDE:s /Debug JS</li>
-                        <li class="">Deploy JS projects</li>
+                    <h3>Collectably.com</h3>
+                    <img src="img/collectably.png" />
+                </section>
+
+				<section>
+					<h2>Expectation MGMT</h2>
+				</section>
+
+                <section>
+                    <h2>Overview</h2>
+                    <ul>
+                        <li>Background</li>
+                        <li>Why learn Javascript (JS)?</li>
+                        <li>What is JS ?</li>
+                        <li>Web Development</li>
                     </ul>
                 </section>
 
                 <section>
-	                <section>
-	                    <h2>Background</h2>
-	                    <p class="fragment">From Wikipedia:<br/>
-	                        "JavaScript (JS) is an open source client-side scripting language
-	                        commonly implemented as part of a web browser in order to create
-	                        enhanced user interfaces and dynamic websites."</p>
-	                </section>
+                    <p>"Javascript .. det är väl ungefär som Java"</p>
+                </section>
+
+                <section>
+                    <h1>1995</h1>
+                    <img src="img/netscape_navgator.jpg">
+                    <p class="fragment">"This is to weird looking, make the syntax look more like Java"</p>
+                </section>
+
+                <section>
+                    <h1>1997 &gt </h1>
+                    <img src="img/jspopup.jpeg" height="300px">
+                </section>
+
+                <section>
+                    <h1>1997 &gt </h1>
+                    <img style="float:left" src="img/flash.jpeg" height="300px">
+                    <img style="float:right;top:100px" src="img/silverlight.jpeg" height="300px">
+                </section>
+
+                <section>
+                    <h1>1999</h1>
+                    <img src="img/ajax.jpeg" height="500px">
+                </section>
+
+                <section>
+                    <h1>2004</h1>
+                    <img src="img/chrome.jpeg" height="400px">
+                </section>
+
+                <section>
+                    <h1>2008></h1>
+                    <img src="img/grapgh.jpg" height="500px">
+                </section>
+
+                <section>
+                    <h2>Why ?</h2>
+                    <p class="fragment">THE Scripting language of the web</p>
 	            </section>
 
                 <section>
-                    <h2>Brendan Eich</h2>
-                    <img class="fragment" src="./img/brendan_Eich.jpeg"/>
-                    <p class="fragment">"The Syntax is to weird looking, Make it more like Java"</p>
+                    <img src="img/githublist.png" height="1000px">
                 </section>
 
                 <section>
-                    <h2>Javascript Is</h2>
-					<ul>
-						<li class="fragment">Object Oriented</li>
-						<li class="fragment">Dynamic</li>
-						<li class="fragment">Functional</li>
-						<li class="fragment">Prototype-based</li>
-						<li class="fragment">Weakly typed</li>
-					</ul>
+                    <h2>Javascript is</h2>
+                    <ul>
+                        <li>A scripting language</li>
+                        <li>Weakly typed</li>
+                        <li>Functional</li>
+                    </ul>
+                </section>
+                <section>
+                    <p>JS is a scripting language</p>
+                </section>
+
+                <section class="codeblock">
+<pre ><code contenteditable>var mystring = "hej";
+log(mystring);
+</code></pre>
+                    <button class="btn btn-large eval">Submit</button>
+                    <p class="output"></p>
                 </section>
 
 				<section>
@@ -136,84 +145,65 @@
 							<li>Numbers</li>
 							<li>Booleans</li>
 							<li>Arrays</li>
-							<li>HashMaps (Dictionaries)</li>
+							<li>HashMaps (Object)</li>
 						</ul>
 					</ul>
-					<pre class=""><code contenteditable>
-var myString = "myString";
+                </section>
+
+
+
+                <section class="codeblock">
+<pre ><code contenteditable>var myString = "myString";
 var myInt = 0;
 var myFloat = 0.1;
 var myBool = true;
 var myArray = ["stringElement", 1];
 var myMap = {name : "Anders", age: 28};
-myMap.Name; //Outputs 'Anders'
-myMap.age; //Outputs 'Age'
+log(myMap.name); //Outputs 'Anders'
+log(myMap.age); //Outputs 'Age'
 </code></pre>
-				<button class="btn btn-large eval">Submit</button>
-				<p class="output"></p>
+                <button class="btn btn-large eval">Submit</button>
+                <p class="output"></p>
                 </section>
 
-            	<section>
-	                <h2>Javascript Functions</h2>
-	                <p class="fragment">Js functions are first class objects and can therefore have properties</p>
+                <section>
+                    <p>JS Functions are first class objects</p>
+                </section>
 
-	                <pre class="fragment"><code contenteditable>
-var log = function(inputVal) {
-	if(inputVal != null)
-	{
-		console.log(inputVal);
-		return;
-	}
-	console.log(this.default);
-
-}
-myFunc.default = "Default Value";
-log("Log Me") //Outputs 'Log Me
-log() //Outputs 'Default Value'
-<script type="text/javascript">
-$('#length').val($('.special').length);
-</script>
+                <section class="codeblock">
+<pre ><code contenteditable>var addTwoNumbers = function(a,b) {
+return a+b;
+};
+log(addTwoNumbers(1,2));
 </code></pre>
-            	</section>
-
-
-            	<section>
-	                <h2>Javascript Functions</h2>
-	                <p class="fragment">Js functions are first class objects and can therefore be passed around</p>
-
-	                <pre class="fragment"><code contenteditable>
-var addTwentyTo = function(inputVal, callback) {
-	callback(inputVal + 20);
-}
-addTwentyTo(2, log); //Outputs '22'
-<script type="text/javascript">
-$('#length').val($('.special').length);
-</script>
-</code></pre>
-            	</section>
+                <button class="btn btn-large eval">Submit</button>
+                <p class="output"></p>
+                </section>
 
 
                 <section>
-					<h2>onLoad</h2>
-					<pre class="">
-						<code contenteditable>
-							<div id="length"></div>
-							<script type="text/javascript">
-								$('#length').val($('.special').length);
-							</script>
-							<div class="special"></div>
-							<div class="special"></div>
-							<div class="special"></div>
-						</code>
-					</pre>
+                    <p>JS is weakly typed</p>
+                </section>
 
+                <section class="codeblock">
+<pre ><code contenteditable>log("hej");
+</code></pre>
+                    <button class="btn btn-large eval">Submit</button>
+                    <p class="output"></p>
+                </section>
 
-					<p style="height:200px">&nbsp;</p>
-				</section>
+                <section>
+                    <p>Equality Operators (==)</p>
+                </section>
 
+                <section class="codeblock">
+<pre ><code contenteditable>log("hej" == "hej2");
+</code></pre>
+                    <button class="btn btn-large eval">Submit</button>
+                    <p class="output"></p>
+                </section>
 
 				<section>
-					<h2>Loosely typed</h2>
 					<pre class="fragment"><code contenteditable>
 '' == '0'           // false
 0 == ''             // true
@@ -237,6 +227,21 @@ null == undefined   // true
 				</section>
 
 
+                <section>
+                    <p>Javascript is Object Oreiented</p>
+                </section>
+
+                <section class="codeblock">
+<pre ><code contenteditable>var myobject = function()
+{
+this.value = 5;
+};
+var o = new myobject();
+log(o.value)
+</code></pre>
+                    <button class="btn btn-large eval">Submit</button>
+                    <p class="output"></p>
+                </section>
 
 				<section>
 					<h2>Clientside vs Serverside</h2>
@@ -369,7 +374,11 @@ $('.mySelector').trigger('custom_event', ['param1', 'param2']);</code></pre>
 
 			</div>
 
+			
+			<div class="footer" />
 		</div>
+
+
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.min.js"></script>
@@ -400,6 +409,20 @@ $('.mySelector').trigger('custom_event', ['param1', 'param2']);</code></pre>
 			});
 
 		</script>
+
+        <script>
+            document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+            $('.eval').on('click', function(obj) {
+
+                var log = function(obj) {
+                    $("p.output").append("Output: " + obj + "<br />");
+                }
+
+                eval($($(this).prev().children()).text());
+            });
+
+
+        </script>
 
 	</body>
 </html>
