--- a/examples/jquery_plugin_carousel.html
+++ b/examples/jquery_plugin_carousel.html
@@ -5,8 +5,10 @@
 	<title>jQuery plugin</title>
 	<link type='text/css' rel='stylesheet' href='../css/styles.css' />
 	<link type='text/css' rel='stylesheet' href='../css/liquidcarousel.css' />
+	<link rel="stylesheet" href="../css/tomorrow-night-bright.css" />
 	<script type="text/javascript" src="../js/lib/jquery.js"></script>
 	<script type="text/javascript" src="../js/lib/jquery.liquidcarousel.js"></script>
+	<script type="text/javascript" src='../presentation/plugin/highlight/highlight.js'></script>
 </head>
 <body>
 	<h1>jQuery Plugin: "Liquid Carousel" image slider</h1>
@@ -53,39 +55,36 @@
 
 <div id="explanation" style="display: none;">
 	<p>Include the jQuery library and the liquid plugin:</p>
-	<pre>
-	&lt;script type="text/javascript" src="js/lib/jquery.js"&gt;&lt;/script&gt;
-	&lt;script type="text/javascript" src="js/lib/jquery.liquidcarousel.js"&gt;&lt;/script&gt;
-	</pre>
+<pre><code>&lt;script type="text/javascript" src="js/lib/jquery.js"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="js/lib/jquery.liquidcarousel.js"&gt;&lt;/script&gt;
+</code></pre>
 
 	Then you need to add the HTML structure as a list of items and the navigation buttons:
-	<pre>
-	&lt;div id="image_slider"&gt;
-		&lt;span class="previous"&gt;&lt;/span&gt;
-		&lt;div class="wrapper"&gt;
-			&lt;ul&gt;
-				&lt;li&gt;&lt;a href="#"&gt;&lt;img src="image01.jpg" alt="image01"/&gt;&lt;/a&gt;&lt;/li&gt;
-				&lt;li&gt;&lt;a href="#"&gt;&lt;img src="image02.jpg" alt="image02"/&gt;&lt;/a&gt;&lt;/li&gt;
-				&lt;li&gt;&lt;a href="#"&gt;&lt;img src="image03.jpg" alt="image03"/&gt;&lt;/a&gt;&lt;/li&gt;
-				&lt;li&gt;&lt;a href="#"&gt;&lt;img src="image04.jpg" alt="image04"/&gt;&lt;/a&gt;&lt;/li&gt;
-				...
-			&lt;/ul&gt;
-		&lt;/div&gt;
-		&lt;span class="next"&gt;&lt;/span&gt;
+<pre><code>&lt;div id="image_slider"&gt;
+	&lt;span class="previous"&gt;&lt;/span&gt;
+	&lt;div class="wrapper"&gt;
+		&lt;ul&gt;
+			&lt;li&gt;&lt;a href="#"&gt;&lt;img src="image01.jpg" alt="image01"/&gt;&lt;/a&gt;&lt;/li&gt;
+			&lt;li&gt;&lt;a href="#"&gt;&lt;img src="image02.jpg" alt="image02"/&gt;&lt;/a&gt;&lt;/li&gt;
+			&lt;li&gt;&lt;a href="#"&gt;&lt;img src="image03.jpg" alt="image03"/&gt;&lt;/a&gt;&lt;/li&gt;
+			&lt;li&gt;&lt;a href="#"&gt;&lt;img src="image04.jpg" alt="image04"/&gt;&lt;/a&gt;&lt;/li&gt;
+			...
+		&lt;/ul&gt;
 	&lt;/div&gt;
-	</pre>
+	&lt;span class="next"&gt;&lt;/span&gt;
+&lt;/div&gt;
+</code></pre>
 
 	<p>Finally initiate the script using the $(document).ready() function:</p>
-	<pre>
-	$(document).ready(function() {
-		console.log("Plugin is initiated when document is loaded and ready");
-		$('#image_slider').liquidcarousel({
-			height: 129,		//the height of the list
-			duration: 500,		//the duration of the animation, in ms
-			hidearrows: true	//hide arrows if all of the list items are visible
-		});
+<pre><code>$(document).ready(function() {
+	console.log("Plugin is initiated when document is loaded and ready");
+	$('#image_slider').liquidcarousel({
+		height: 129,		//the height of the list
+		duration: 500,		//the duration of the animation, in ms
+		hidearrows: true	//hide arrows if all of the list items are visible
 	});
-	</pre>
+});
+</code></pre>
 
 </div>
 
@@ -94,6 +93,7 @@
 <p style="height:800px">&nbsp;</p>
 
 <script type="text/javascript">
+		hljs.initHighlightingOnLoad();
 		$(document).ready(function() {
 			console.log("Plugin is initiated when document is loaded and ready");
 			$('#image_slider').liquidcarousel({
